Bootstrap jumbotron and breadcrumb

--- a/studies/bootstrap/exercises/pages/components.html
+++ b/studies/bootstrap/exercises/pages/components.html
@@ -1,45 +1,55 @@
-<!-- Título (jumbotron) -->
-<!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+    <h1 class="display-4">Components</h1>
+    <p class="lead m-1">Example of some bootstrap components.</p>
+</div>
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#/pages/welcome.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Components</li>
+    </ol>
+</nav>
 
-<h1>1. Botões -
+<h1>1. Buttons -
     <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/buttons/" target="_black">Documentação Oficial</a>
+        <a href="https://getbootstrap.com/docs/4.0/components/buttons/" target="_black">Official Documentation</a>
     </small>
 </h1>
 <hr>
 
-<!-- Botões -->
+<!-- Buttons -->
 
-<h1 class="mt-5">2. Progresso -
+<h1 class="mt-5">2. Progress -
     <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/progress/" target="_black">Documentação Oficial</a>
+        <a href="https://getbootstrap.com/docs/4.0/components/progress/" target="_black">Official Documentation</a>
     </small>
 </h1>
 <hr>
 
-<!-- Progresso -->
+<!-- Progress -->
 
-<h1 class="mt-5">3. Mensagens (Alertas) -
+<h1 class="mt-5">3. Messages (Alerts) -
     <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/alerts/" target="_black">Documentação Oficial</a>
+        <a href="https://getbootstrap.com/docs/4.0/components/alerts/" target="_black">Official Documentation</a>
     </small>
 </h1>
 <hr>
 
-<!-- Alertas -->
+<!-- Alerts -->
 
-<h1 class="mt-5">4. Paginação -
+<h1 class="mt-5">4. Pagination -
     <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/pagination/" target="_black">Documentação Oficial</a>
+        <a href="https://getbootstrap.com/docs/4.0/components/pagination/" target="_black">Official Documentation</a>
     </small>
 </h1>
 <hr>
 
-<!-- Peginação -->
+<!-- Pagination -->
 
 <h1 class="mt-5">5. Tooltip -
     <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/tooltip/" target="_black">Documentação Oficial</a>
+        <a href="https://getbootstrap.com/docs/4.0/components/tooltip/" target="_black">Official Documentation</a>
     </small>
 </h1>
 <hr>
@@ -48,7 +58,7 @@
 
 <h1 class="mt-5">6. Slider -
     <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/carousel/" target="_black">Documentação Oficial</a>
+        <a href="https://getbootstrap.com/docs/4.0/components/carousel/" target="_black">Official Documentation</a>
     </small>
 </h1>
 <hr>
@@ -57,7 +67,7 @@
 
 <h1 class="mt-5">7. Accordion -
     <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/collapse/" target="_black">Documentação Oficial</a>
+        <a href="https://getbootstrap.com/docs/4.0/components/collapse/" target="_black">Official Documentation</a>
     </small>
 </h1>
 <hr>
