--- a/studies/bootstrap/exercises/pages/grid.html
+++ b/studies/bootstrap/exercises/pages/grid.html
@@ -1,45 +1,55 @@
-<!-- Título (jumbotron) -->
-<!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+    <h1 class="display-4">Grid System</h1>
+    <p class="lead m-1">
+        Responsiveness Resolution: containers, rows and 12 columns</p>
+</div>
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#/pages/welcome.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Grid</li>
+    </ol>
+</nav>
 
 <p class="lead">
-    <a href="https://getbootstrap.com/docs/4.0/layout/grid/"
-        target="_black">Documentação Oficial</a>
+    <a href="https://getbootstrap.com/docs/4.0/layout/grid/" target="_black">Official Documentation</a>
 </p>
 
-<div class="exercicio">
-    <h1>1. Grid Básica</h1>
+<div class="exercise">
+    <h1>1. Basic Grid</h1>
     <hr>
 
-    <!-- Grid Básica -->
+    <!-- Basic Grid -->
 
-    <h1 class="mt-5">2. Grid Responsiva</h1>
+    <h1 class="mt-5">2. Responsive Grid</h1>
     <hr>
 
-    <!-- Grid Responsiva -->
+    <!-- Responsive Grid -->
 
-    <h1 class="mt-5">3. Quebra de Linha</h1>
+    <h1 class="mt-5">3. Break Line</h1>
     <hr>
 
-    <!-- Quebra de Linha -->
+    <!-- Break Line -->
 
-    <h1 class="mt-5">4. Ordem</h1>
+    <h1 class="mt-5">4. Order</h1>
     <hr>
 
-    <!-- Ordem -->
+    <!-- Order -->
 
     <h1 class="mt-5">5. Offset</h1>
     <hr>
 
     <!-- Offset -->
 
-    <h1 class="mt-5">6. Alinhamento</h1>
+    <h1 class="mt-5">6. Alignment</h1>
     <hr>
 
-    <!-- Alinhamento -->
+    <!-- Alignment -->
 </div>
 
 <style>
-    .exercicio div {
+    .exercise div {
         font-size: 1.5em;
     }
 
