--- a/studies/bootstrap/exercises/pages/fundamentals.html
+++ b/studies/bootstrap/exercises/pages/fundamentals.html
@@ -1,5 +1,15 @@
-<!-- Title (jumbotron) -->
-<!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+    <h1 class="display-4">Fundamentals</h1>
+    <p class="lead m-1">Some important bootstrap features.</p>
+</div>
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#/pages/welcome.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Fundamentals</li>
+    </ol>
+</nav>
 
 <div class="exercise">
     <h1>1. Typography -
