--- a/studies/bootstrap/exercises/pages/fundamentals.html
+++ b/studies/bootstrap/exercises/pages/fundamentals.html
@@ -45,8 +45,10 @@
     </h1>
     <hr>
 
-    <!-- Cores -->
-
+    <!-- Colors -->
+    <div class="my-1 p3 bg-primary text-light">1</div>
+    <div class="my-1 p-3 bg-danger text-white">2</div>
+    <div class="my-1 p-3 bg-warning text-success">3</div>
     <h1 class="mt-5">4. Flex -
         <small>
             <a href="https://getbootstrap.com/docs/4.0/utilities/flex/" target="_black">Official Documentation</a>
@@ -55,7 +57,11 @@
     <hr>
 
     <!-- Flex -->
-
+    <div class="d-sm-flex flex-column-reverse p-2">
+        <div class="align-self-end">1</div>
+        <div class="align-self-center">2</div>
+        <div class="align-self-start">3</div>
+    </div>
     <h1 class="mt-5">5. Images -
         <small>
             <a href="https://getbootstrap.com/docs/4.0/content/images/" target="_black">Official Documentation</a>
@@ -63,7 +69,12 @@
     </h1>
     <hr>
 
-    <!-- Imagens -->
+    <!-- Images -->
+    <div class="p-2">
+        <img src="/imgs/img1.png" alt="Image1" class="mx-auto d-block" width="400">
+        <img src="/imgs/img1.png" alt="Image2" class="img-thumbnail" width="400">
+        <img src="/imgs/img1.png" alt="Image3" class="img-fluid" width="400">
+    </div>
 
     <h1 class="mt-5">6. Float -
         <small>
@@ -73,6 +84,9 @@
     <hr>
 
     <!-- Float -->
+    <div class="my-1 p-3 float-left">1</div>
+    <div class="my-1 p-3 float-right">2</div>
+    <div class="my-1 p-3 float-xl-left">3</div>
 </div>
 
 <style>
