--- a/studies/bootstrap/exercises/pages/grid.html
+++ b/studies/bootstrap/exercises/pages/grid.html
@@ -21,6 +21,21 @@
     <hr>
 
     <!-- Basic Grid -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col bg-primary">1</div>
+            <div class="col bg-danger">2</div>
+            <div class="col bg-warning">3</div>
+            <div class="col bg-info">4</div>
+            <div class="col bg-secondary">5</div>
+        </div>
+        <div class="row mt-3">
+            <div class="col bg-danger">1</div>
+            <div class="col-4 bg-warning">2</div>
+            <div class="col-5 bg-info">3</div>
+            <div class="col bg-primary">4</div>
+        </div>
+    </div>
 
     <h1 class="mt-5">2. Responsive Grid</h1>
     <hr>
