--- a/studies/bootstrap/exercises/pages/components.html
+++ b/studies/bootstrap/exercises/pages/components.html
@@ -19,6 +19,31 @@
 <hr>
 
 <!-- Buttons -->
+<div>
+    <div class="mb-3">
+        <button class="btn btn-primary">Save</button>
+        <button class="btn btn-secondary">Cancel</button>
+        <button class="btn btn-outline-success">Finish</button>
+        <button class="btn btn-danger" disabled>Delete</button>
+        <button class="btn btn-warning" data-toggle="button">Select</button>
+    </div>
+
+    <div class="btn-group mb-3">
+        <button class="btn btn-info">Left</button>
+        <button class="btn btn-info active">Center</button>
+        <button class="btn btn-info">Right</button>
+    </div>
+
+    <div class="dropdown">
+        <button class="btn btn-danger btn-lg dropdown-toggle" data-toggle="dropdown">
+            Purchase!
+        </button>
+        <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Paypal</a>
+            <a href="#" class="dropdown-item">Pagseguro</a>
+        </div>
+    </div>
+</div>
 
 <h1 class="mt-5">2. Progress -
     <small>
