--- a/studies/bootstrap/exercises/pages/components.html
+++ b/studies/bootstrap/exercises/pages/components.html
@@ -53,6 +53,21 @@
 <hr>
 
 <!-- Progress -->
+<div>
+    <div class="progress mb-4">
+        <div class="progress-bar" style="width:25%"></div>
+    </div>
+
+    <div class="progress mb-4">
+        <div class="progress-bar progress-bar-striped bg-success" style="width:50%">50%</div>
+    </div>
+    <div class="progress" style="height: 15px">
+    <div class="progress-bar" style="width: 15%">15%</div>
+    <div class="progress-bar bg-danger" style="width: 30%">30%</div>
+    <div class="progress-bar bg-info" style="width:20%">20%</div>
+    <div class="progress-bar bg-warning" style="width: 25%">25%</div>
+    </div>
+</div>
 
 <h1 class="mt-5">3. Messages (Alerts) -
     <small>
