bootstrap pagination and alerts

--- a/studies/bootstrap/exercises/pages/components.html
+++ b/studies/bootstrap/exercises/pages/components.html
@@ -77,6 +77,33 @@
 <hr>
 
 <!-- Alerts -->
+<div>
+    <div class="alert alert-success">
+        Operation performed successfully!
+    </div>
+    <div class="alert alert-warning">
+        <strong>Warning!</strong> Operation made an impact on the stock!
+    </div>
+    <div class="alert alert-danger">
+        <strong>Error!</strong> an unexpected error has occurred!
+        <div class="alert-link" href="#">More Details</div>
+    </div>
+    <div>
+        <div class="alert alert-success">
+            <h4 class="alert-heading">Congratulations!</h4>
+            <p>Successful process!</p>
+            <hr>
+            <p class="mb-0">Can be proud!</p>
+        </div>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+    </div>
+
+</div>
 
 <h1 class="mt-5">4. Pagination -
     <small>
@@ -86,6 +113,33 @@
 <hr>
 
 <!-- Pagination -->
+<div>
+    <nav>
+        <ul class="pagination">
+            <li class="page-item">
+                <a href="#" class="page-link">Previous</a>
+            </li>
+            <li class="page-item">
+            <a href="#" class="page-link">1</a>
+            </li>
+            <li class="page-item active">
+            <a href="#" class="page-link">2</a>
+            </li>
+            <li class="page-item">
+            <a href="#" class="page-link">3</a>
+            </li>
+            <li class="page-item">
+            <a href="#" class="page-link">4</a>
+            </li>
+            <li class="page-item">
+            <a href="#" class="page-link">5</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">Next</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
 <h1 class="mt-5">5. Tooltip -
     <small>
