--- a/studies/bootstrap/exercises/pages/components.html
+++ b/studies/bootstrap/exercises/pages/components.html
@@ -62,10 +62,10 @@
         <div class="progress-bar progress-bar-striped bg-success" style="width:50%">50%</div>
     </div>
     <div class="progress" style="height: 15px">
-    <div class="progress-bar" style="width: 15%">15%</div>
-    <div class="progress-bar bg-danger" style="width: 30%">30%</div>
-    <div class="progress-bar bg-info" style="width:20%">20%</div>
-    <div class="progress-bar bg-warning" style="width: 25%">25%</div>
+        <div class="progress-bar" style="width: 15%">15%</div>
+        <div class="progress-bar bg-danger" style="width: 30%">30%</div>
+        <div class="progress-bar bg-info" style="width:20%">20%</div>
+        <div class="progress-bar bg-warning" style="width: 25%">25%</div>
     </div>
 </div>
 
@@ -98,9 +98,9 @@
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
             <strong>Holy guacamole!</strong> You should check in on some of those fields below.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true">&times;</span>
             </button>
-          </div>
+        </div>
     </div>
 
 </div>
@@ -120,19 +120,19 @@
                 <a href="#" class="page-link">Previous</a>
             </li>
             <li class="page-item">
-            <a href="#" class="page-link">1</a>
+                <a href="#" class="page-link">1</a>
             </li>
             <li class="page-item active">
-            <a href="#" class="page-link">2</a>
+                <a href="#" class="page-link">2</a>
             </li>
             <li class="page-item">
-            <a href="#" class="page-link">3</a>
+                <a href="#" class="page-link">3</a>
             </li>
             <li class="page-item">
-            <a href="#" class="page-link">4</a>
+                <a href="#" class="page-link">4</a>
             </li>
             <li class="page-item">
-            <a href="#" class="page-link">5</a>
+                <a href="#" class="page-link">5</a>
             </li>
             <li class="page-item">
                 <a href="#" class="page-link">Next</a>
@@ -149,6 +149,15 @@
 <hr>
 
 <!-- Tooltip -->
+<div>
+    <div class="alert alert-warning">
+        Need to call a JS function
+        <strong>And now?</strong>
+    </div>
+    <button class="btn btn-danger" data-toggle="tooltip" data-placement="right" title="Think before!">
+        Delete
+    </button>
+</div>
 
 <h1 class="mt-5">6. Slider -
     <small>
@@ -158,6 +167,7 @@
 <hr>
 
 <!-- Slider -->
+
 
 <h1 class="mt-5">7. Accordion -
     <small>
@@ -169,5 +179,6 @@
 <!-- Accordion -->
 
 <script>
-    // ...
+    // work?
+    $('[data-toggle="tooltip"]').tooltip()
 </script>
