--- a/studies/bootstrap/exercises/pages/components.html
+++ b/studies/bootstrap/exercises/pages/components.html
@@ -167,7 +167,27 @@
 <hr>
 
 <!-- Slider -->
-
+<div>
+    <div id="slider" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner bg-dark">
+            <div class="carousel-item active">
+                <img src="imgs/slide1.png" alt="Slide1" class="d-block mx-auto">
+            </div>
+            <div class="carousel-item">
+                <img src="imgs/slide2.png" alt="Slide2" class="d-block mx-auto">
+            </div>
+            <div class="carousel-item">
+                <img src="imgs/slide3.png" alt="Slide3" class="d-block mx-auto">
+            </div>
+        </div>
+        <a href="#slider" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a href="#slider" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
+</div>
 
 <h1 class="mt-5">7. Accordion -
     <small>
@@ -177,6 +197,48 @@
 <hr>
 
 <!-- Accordion -->
+<div>
+    <div class="mb-5" id="accordion">
+        <div class="card">
+            <div class="card-header" id="question1">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#answer1">
+                        Who is the coolest programming teacher?
+                    </button>
+                </h5>
+            </div>
+            <div class="collapse" id="answer1" data-parent="#accordion">
+                <div class="card-body">
+                    Can i say the answer?
+                </div>
+            </div>
+            <div class="card-header" id="question2">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#answer2">
+                        Test 2?
+                    </button>
+                </h5>
+            </div>
+            <div class="collapse" id="answer2" data-parent="#accordion">
+                <div class="card-body">
+                    Test 2!
+                </div>
+            </div>
+            <div class="card-header" id="question3">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#answer3">
+                        Test 3?
+                    </button>
+                </h5>
+            </div>
+            <div class="collapse" id="answer3" data-parent="#accordion">
+                <div class="card-body">
+                    Test 3!
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
     // work?
