--- a/studies/bootstrap/exercises/pages/form.html
+++ b/studies/bootstrap/exercises/pages/form.html
@@ -16,3 +16,77 @@
 </p>
 
 <!-- Form -->
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0">
+            Form Exemple
+        </h5>
+    </div>
+    <div class="card-body">
+        <form action="" class="container-fluid">
+            <div class="form-row">
+                <div class="col-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter your name.">
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-12 col-md-6">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">@</span>
+                            </div>
+                            <input type="email" class="form-control" id="email" placeholder="Enter your email.">
+                        </div>
+                        <small class="form-text text-muted">
+                            We will send the email to confirm the registration.
+                        </small>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="form-group">
+                        <label for="preferredLanguage">language</label>
+                        <select id="preferredLanguage" class="form-control">
+                            <option value="">Select</option>
+                            <option>JS</option>
+                            <option>Java</option>
+                            <option>Python</option>
+                            <option>Ruby</option>
+                            <option>Other</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                        <label class="form-check-label" for="defaultCheck1">
+                            Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2" disabled>
+                        <label class="form-check-label" for="defaultCheck2">
+                            Disabled checkbox
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="form-row mb-0">
+                <div class="col-12 d-flex justify-content-end">
+                    <button class="btn btn-primary mr-2" type="submit">Save</button>
+                    <button class="btn btn-secondary" type="reset">Cancel</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
